# metric-video-player

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: gui.rs  main.rs  metrics.rs  sdl_gui.rs  video_player.rs
